--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -38,3 +38,6 @@
     <li>For pizzas: Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and cheese.</li>
     <li>Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</li>
 </ol>
+<button>
+    <a href="../recipes/">Back to the recipe list</a>
+</button>
