Added the macaroni and cheese recipe, also fixed the pizza image

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <h1>Pizza</h1>
-    <a href=https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5300487.jpg&w=952&h=952&c=sc&poi=face&q=85>
-    </a>
+    <img src=https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5300487.jpg&w=952&h=952&c=sc&poi=face&q=85></a>
     <h2>Description</h2>
         <p>A homemade pepperoni pizza. Just like it came out of a pizza oven in Italy.</p>
             <h3>Ingredients</h3>
