Added the baked potato recipe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Odin Recipes</h1>
         <a href="recipes/pizza.html">Pizza</a>
         <a href="recipes/macaroni_and_cheese.html"</a>
+        <a href="recipes/baked_potato.html"</a>
     </body>
 </html>
